[Feat/#6] OAuth 로그인 기능 구현 (#11)
* [feat/#6] 🩹 fix: 리뷰 내용 반영

- 회원 필드 속성 변경
  - 이미지(dto에서만), 비밀번호 확인 필드 제거
  - 계좌정보 선택적 속성 변경
- Controller 수정
  - url에서 api 제거
  - RequestBody의 어노테이션 변경 (@Validated -> @Valid)
    - 클래스 레벨의 유효성 검사가 아닌, 객체의 필드나 메소드 파라미터, 반환 값의 유효성 검사를 위함
- MemberList response dto 생성
  - 다른 정보가 추가되는 경우(확장성) 고려

* [feat/#6] 👷 chore: jwt 의존성 추가

- jwt 로그인 구현을 위한 라이브러리

* [feat/#6] 👷 chore: Spring Security 및 OAuth2 의존성 추가 설정

* [feat/#6] 🩹 fix: Member entity 구조 수정

1. Role - 단일 설정 및 set 설정 메소드 추가
2. password - 필수값 설정 제거
3. 회원가입 필드 - 계좌정보 삭제

* [feat/#6] 🐛 bugfix: 회원가입 서비스 메서드 Transactional 어노테이션 추가

- h2 db를 사용했을 때 정상 동작되나, mysql db를 사용했을 경우 오류 발생

* [feat/#6] ✨ feat: jwt util 및 filter 구현

- 토큰 생성 및 검증, 권한 부여 기능 구현
- 토큰 필터 체인 로직 구현

* [feat/#6] ✨ feat: oauth client 설정 및 user 정보 dto 생성

- oauth 사용자 정보 추출 시 설정
- oauth 사용자 정보 attributes, principal dto 생성

* [feat/#6] oauth2 로그인 service 및 success handler 구현

- 소셜 회원 생성 및 회원가입/정보 업데이트
- 소셜 회원 인증 성공 시 처리 로직 구현 : 액세스 토큰 생성, http 응답 포함
- token 반환 dto 생성

* [feat/#6] ✨ feat: security 보안 구성 설정

- cors 설정
- csrf, 폼 로그인, Http Basic 인증, 세션 비활성화
- 헤더 설정
- 요청 인증 설정
- OAuth2 로그인 설정
- jwt 필터 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,10 +24,14 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
+  # data.sql operate after hibernate init (not on production)
+  defer-datasource-initialization: true
 
-    # data.sql operate after hibernate init (not on production)
-    defer-datasource-initialization: true
 
+  # oauth2
+  profiles:
+    include: oauth
+    
   # sql init (not on production)
   sql:
     init:
